...

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        app:title="일기 수정"
        app:titleCentered="true"
        app:navigationIcon="@drawable/ic_arrow_back"
        app:navigationIconTint="@color/text_primary"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.fragment.app.FragmentContainerView
...

        <Space
            android:layout_width="12dp"
            android:layout_height="match_parent"/>

        <Button
            android:id="@+id/btn_edit_save"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_weight="1"
            android:backgroundTint="@color/text_secondary"
            android:text="저장"
            android:textColor="@color/bg"
...
